Added more setenv.sh properties