@@ -29,7 +29,7 @@ Remember the *omx* specified in your db_uri, because this will be the name of th
 To make it clear to tomcat where to find your properties file, you have to edit the setenv.sh file in the apache-tomcat folder.
 
 ```
-	echo 'CATALINA_OPTS="-Dmolgenis.home=${molgenis_home_folder}"' > ${apache-tomcat_folder}/bin/setenv.sh
+echo 'CATALINA_OPTS="-Xmx2g -XX:MaxPermSize=256m -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -Dmolgenis.home=${molgenis_home_folder}"' > ${apache-tomcat_folder}/bin/setenv.sh
 ```
 
 The -Dmolgenis.home property tells tomcat where to find your properties file. Note that you should **NOT** use relative paths in your apache-tomcat configuration. Always use absolute paths to point to your molgenis-server.properties.
